tests/ui/parser/yul/recursion_limit.stderr
error: recursion limit reached
  --> ROOT/tests/ui/parser/yul/recursion_limit.sol:LL:CC
   |
LL |             {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{ // 63
   |                                                                           - while parsing Yul statement
LL |             {}
   |             ^

error: aborting due to 1 previous error

